objects/Globys_Transaction__c/Globys_Transaction__c.object-meta.xml
<CustomObject>
    <description>Transaction table to pass parent/child linkages to Globys</description>
    <label>Globys Transaction</label>
    <nameField>
        <displayFormat>T-{0000000000}</displayFormat>
        <label>GlobysTransaction Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Globys Transactions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>