objects/Globys_Transaction__c/fields/Action__c.field-meta.xml
<CustomField>
    <fullName>Action__c</fullName>
    <defaultValue>&quot;Add&quot;</defaultValue>
    <description>Used to determine what kind of transaction this is</description>
    <label>Action</label>
    <length>30</length>
    <required>true</required>
    <type>Text</type>
</CustomField>