objects/Globys_Transaction__c/fields/Child_Identifer__c.field-meta.xml
<CustomField>
    <fullName>Child_Identifer__c</fullName>
    <description>This would contain the  Legacy ID or ICC Subscriber ID of the child</description>
    <label>Child Identifer</label>
    <length>20</length>
    <type>Text</type>
</CustomField>