objects/Globys_Transaction__c/fields/Globys_Response__c.field-meta.xml
<CustomField>
    <fullName>Globys_Response__c</fullName>
    <description>Response from Globys web service</description>
    <label>Globys Response</label>
    <type>TextArea</type>
</CustomField>