objects/Globys_Transaction__c/fields/Parent_Identifier_Source__c.field-meta.xml
<CustomField>
    <fullName>Parent_Identifier_Source__c</fullName>
    <description>Will contain BPID or ICCS (if there is no BPID in the grandparent customer detail)</description>
    <label>Parent Identifier Source</label>
    <length>4</length>
    <type>Text</type>
</CustomField>