objects/Globys_Transaction__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <defaultValue>&quot;Pending&quot;</defaultValue>
    <description>Is the transaction waiting to be processed, processed with error or processed successfully</description>
    <label>Status</label>
    <length>30</length>
    <required>true</required>
    <type>Text</type>
</CustomField>