objects/Globys_Transaction__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Action__c</columns>
    <columns>Status__c</columns>
    <columns>Child_Identifer__c</columns>
    <columns>Parent_Identifier__c</columns>
    <columns>Child_Legacy_Biller__c</columns>
    <columns>Parent_Identifier_Source__c</columns>
    <columns>Child_Subscriber__c</columns>
    <columns>Parent_Subscriber__c</columns>
    <columns>Globys_Response__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>