objects/Globys_Transaction__c/listViews/Blank_Child_Identifier.listView-meta.xml
<ListView>
    <fullName>Blank_Child_Identifier</fullName>
    <columns>NAME</columns>
    <columns>Action__c</columns>
    <columns>Status__c</columns>
    <columns>Child_Identifer__c</columns>
    <columns>Parent_Identifier__c</columns>
    <columns>Child_Legacy_Biller__c</columns>
    <columns>Parent_Identifier_Source__c</columns>
    <columns>Child_Subscriber__c</columns>
    <columns>Parent_Subscriber__c</columns>
    <columns>Globys_Response__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Child_Identifer__c</field>
        <operation>equals</operation>
    </filters>
    <label>Blank_Child_Identifier</label>
</ListView>