objects/Globys_Transaction__c/listViews/To_Be_Processed_Pending.listView-meta.xml
<ListView>
    <fullName>To_Be_Processed_Pending</fullName>
    <columns>NAME</columns>
    <columns>Action__c</columns>
    <columns>Child_Identifer__c</columns>
    <columns>Parent_Identifier__c</columns>
    <columns>Status__c</columns>
    <columns>Globys_Response__c</columns>
    <columns>Child_Legacy_Biller__c</columns>
    <columns>Parent_Identifier_Source__c</columns>
    <columns>Child_Subscriber__c</columns>
    <columns>Parent_Subscriber__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>LAST_UPDATE</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>UPDATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Pending</value>
    </filters>
    <label>To Be Processed_Pending</label>
</ListView>